Fix: Messages in FAQ where not showing fixed the problem and styled the templates for FAQ

--- a/about/static/about/about.css
+++ b/about/static/about/about.css
@@ -53,6 +53,7 @@ button:hover {
     outline: none;
     font-size: 15px;
     transition: 0.4s;
+    margin-bottom: 10px;
   }
   
   .active, .accordion:hover {
@@ -84,3 +85,10 @@ button:hover {
     
   }
   
+  ::marker {
+    content: '' !important;
+  }
+
+.faq_btn {
+  margin: 7px;
+}
